# YoCoin

./: YoCoin.py  pyproject.toml  slides.html
api/: index.py
templates/: repayment.html
