[project]
name = "yocoin"
version = "1.0.0"
description = "YoCoin Microloan Platform"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "Flask-MySQLdb==1.0.1",
    "Flask-WTF==1.2.1",
    "Flask-Limiter==3.5.0",
    "bcrypt==4.1.2",
    "python-dotenv==1.0.0",
    "WTForms==3.1.1",
    "Werkzeug==3.0.1",
    "mysqlclient==2.2.1",
    "email-validator==2.1.0",
    "requests==2.31.0",
    "qrcode==8.2",
    "Pillow==12.2.0",
    "psutil==7.2.2",
]

[tool.vercel]
entrypoint = "api/index.py"
